# Sailboat-Ros

./: .gitignore  README.md  SAILBOAT.files  SAILBOAT.includes  avoidance_coord_2.txt
BASEMENT/sailboat_model/: CMakeLists.txt  package.xml
BASEMENT/sailboat_model/demo/: EigenTestDemo.cpp  MotionEquationTestDemo.cpp  SplineInterpolationTestDemo.cpp
BASEMENT/sailboat_model/include/: CDynamicVPP.h  CSailboatMotionEquation.h  CSimulationVer1.h
BASEMENT/sailboat_model/launch/: display.launch  start_simulation.launch
BASEMENT/sailboat_model/lib/: CCubicSplineInterpolation.cpp  CDynamicVPP.cpp  CSailboatMotionEquation.cpp  CSimulationVer2.h
BASEMENT/sailboat_model/src/: Mach_Simulation_Pub.cpp  Sailboat_Simulation.cpp  Sensor_Simulation_Pub.cpp  Wind_Simulation_Pub.cpp  frame_tf_broadcaster.cpp  tf_broadcaster.cpp  tf_listener.cpp
BASEMENT/sailboat_model/urdf/: sailboat001.gv
COMMON/commander/: CMakeLists.txt  package.xml
COMMON/commander/src/: commander.cpp  commander_main.cpp
COMMON/sailboat_message/: CMakeLists.txt
COMMON/sailboat_message/msg/: Ahrs_msg.msg  Detected_obs.msg  GPS_msg.msg  Mach_msg.msg  Sensor_all_msg.msg  Sensor_msg.msg  Target_msg.msg  WTST_Pro_msg.msg  WTST_msg.msg  avoidance_para.msg  cmd_commander_cfg_status.msg  cmd_home_position.msg  cmd_vehicle_control_mode.msg  fleet_race_out.msg  fleet_race_para.msg  scanning_out.msg  scanning_para.msg  station_keeping_para.msg  traj_following_para.msg  vehicle_control_mode_msg.msg  vehicle_status_msg.msg
COMMON/sailboat_tf_tree/: CMakeLists.txt  package.xml
COMMON/sailboat_tf_tree/demo/: frame_tf_broadcaster.cpp
COMMON/sailboat_tf_tree/launch/: display.launch  start_demo.launch
COMMON/sailboat_tf_tree/rviz/: sim.rviz
COMMON/sailboat_tf_tree/src/: frame_tf_broadcaster.cpp  state_publisher.cpp  tf_listener.cpp
COMMON/sailboat_tf_tree/urdf/: sailboat001.urdf
COMMON/sensor_process/: CMakeLists.txt  package.xml
COMMON/sensor_process/include/: CSensorProcess.h
COMMON/sensor_process/launch/: Sensor_Start_onboat.launch
COMMON/sensor_process/lib/: CSensorProcess.cpp
COMMON/sensor_process/src/: CSensorProcess.cpp  Sensor_Process.cpp  Sensor_filters.cpp
Common/commander/: CMakeLists.txt  package.xml
Common/commander/cfg/: commander.cfg
Common/commander/src/: commander.cpp
Common/math_tool_lib/: CMakeLists.txt  package.xml
Common/math_tool_lib/demo/: MathDemo.cpp  pidDemo.cpp
Common/math_tool_lib/scripts/: gps_to_xy.py
Common/math_tool_lib/src/: CAngleCal.cpp  CPID.cpp
Common/sailboat_description/: CMakeLists.txt  package.xml
Common/sailboat_description/urdf/: materials.xacro  sailboat_base.xacro
Common/sailboat_launch/: CMakeLists.txt  package.xml
Common/sailboat_launch/launch/: autopilot_onboat.launch  path_following_onboat.launch  rosbag_onboat.launch  set_environment_onboat.launch  set_environment_onshore.launch  start_arduino.launch  start_drivers.launch  start_perception.launch  start_sensor_onboat.launch  start_tf_tree_onboat.launch
Common/sailboat_service/: CMakeLists.txt
Common/self_checking/: CMakeLists.txt  package.xml
Common/self_checking/src/: main.cpp  self_checking.cpp
Detection/object_detection_lib/: CMakeLists.txt  package.xml
Detection/object_detection_lib/src/: detection.cpp
Detection/object_detection_ros/: CMakeLists.txt  package.xml
Detection/object_detection_ros/scripts/: detection.rviz  detection.sh
Detection/object_detection_ros/src/: average.cpp  detection.cpp  detection_main.cpp  detection_ros.cpp  particle_filter.cpp  test.cpp
Detection/object_detection_ros/test/: test.cpp
Drivers/mach_onboat/: CMakeLists.txt  package.xml
Drivers/mach_onboat/launch/: dynamixel_position_control.launch  dynamixel_position_control_old.launch  experiment.launch  turning35.launch  turningnegative35.launch  zigzag10.launch  zigzag20.launch  zigzagnegagtive20.launch  zigzagnegative10.launch
Drivers/mach_onboat/scripts/: arduino_comm.py  dxl_driver.py  dxl_driver_new.py  dxl_driver_old.py  experiment.py
Drivers/mach_onboat/src/: base_control.cpp
Drivers/sailboat_message/: CMakeLists.txt
Drivers/sailboat_message/msg/: Ahrs_msg.msg  Arduino_msg.msg  WTST_msg.msg
Drivers/sensor_onboat/: CMakeLists.txt  README.md  package.xml
Drivers/sensor_onboat/launch/: start_sensor.launch
Drivers/sensor_onboat/scripts/: Ahrs_Talker.py  Radar_Talker.py  SensorListenerDemo.py  WeatherStation_Talker.py  bag_read.py  bag_read_pandas.py  radar.py
Drivers/sensor_process/: CMakeLists.txt  package.xml
Drivers/sensor_process/scripts/: kalman4.py
FUNCTION/autopilot/: CMakeLists.txt  package.xml
FUNCTION/autopilot/cfg/: Sailboat_Mach_Simulation.cfg
FUNCTION/autopilot/src/: AutoPilot.cpp  CAutopilotVer1.cpp  CSailCtrl.cpp
FUNCTION/fleet_race/: CMakeLists.txt
FUNCTION/fleet_race/cfg/: fleet_race.cfg
FUNCTION/fleet_race/src/: ert_main.cpp  fleet_race_main.cpp  race_course.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp
FUNCTION/path_following/: CMakeLists.txt  package.xml
FUNCTION/path_following/cfg/: path_following_point.cfg
FUNCTION/path_following/src/: PathFollowing.cpp
FUNCTION/path_following_lib/: CMakeLists.txt  package.xml
FUNCTION/path_following_lib/demo/: pathFollowingTestDemo.cpp
FUNCTION/path_following_lib/src/: CPathFollowingVer1.cpp
FUNCTION/scanning/: CMakeLists.txt
FUNCTION/scanning/cfg/: pcCtrl.cfg  scanning.cfg
FUNCTION/scanning/src/: ert_main.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  scanning.cpp  scanning_main.cpp
FUNCTION/spare_function/: CMakeLists.txt  package.xml
FUNCTION/spare_function/cfg/: spare_function.cfg
FUNCTION/spare_function/launch/: spare_function_onshore.launch  spare_function_simulation.launch
FUNCTION/spare_function/matlab/: parinit.m  sailboat_ap_ok.mdl
FUNCTION/spare_function/msg/: spare_function_out.msg  spare_function_para.msg
FUNCTION/station_keeping/: CMakeLists.txt  package.xml
Functions/autopilot/: CMakeLists.txt
Functions/avoidance/: CMakeLists.txt  package.xml
Functions/traj_following/: CMakeLists.txt
Gazebo/sailboat_gazebo/: CMakeLists.txt  package.xml
(+789 files in other folders)
